LU-19245 dne: update lmm_oi in dir migrate

A dir migrate doesn't update lov lmm->lmm_oi during
migrate so LFSCK starts to complain about "bad lmm_oi".
Also adding a sane error code to lfsck_layout_master_exec_oit()
so it reports -EINVAL in dryrun mode instead of buffer size
from the previous function call.

Fix lfsck_layout_master_exec_oit() to be aware of
LOV_MAGIC_FOREIGN layout while checking and updating lmm_oi.

HPE-bug-id: LUS-12978
Signed-off-by: Alexander Zarochentsev <alexander.zarochentsev@hpe.com>
Change-Id: I458afaeb2b2a92e083631622b7a7b554b62fa2ea
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/60578
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Reviewed-by: Lai Siyao <lai.siyao@whamcloud.com>
Reviewed-by: Andrew Perepechko <andrew.perepechko@hpe.com>
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>