lustre/mdd/mdd_internal.h
@@ -379,6 +379,17 @@ int mdd_changelog_data_store_xattr(const struct lu_env *env,
 				   struct thandle *handle);
 int mdd_dom_fixup(const struct lu_env *env, struct mdd_device *mdd,
 		  struct mdd_object *mo, struct mdd_object *vo);
+int mdd_lmm_oi(struct lov_mds_md *lmm, struct ost_id *oi, bool set);
+
+static inline int mdd_get_lmm_oi(struct lov_mds_md *lmm, struct ost_id *oi)
+{
+	return mdd_lmm_oi(lmm, oi, false);
+}
+
+static inline int mdd_set_lmm_oi(struct lov_mds_md *lmm, struct ost_id *oi)
+{
+	return mdd_lmm_oi(lmm, oi, true);
+}
 
 /* mdd_trans.c */
 void mdd_object_make_hint(const struct lu_env *env, struct mdd_object *parent,
